--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@lrc-maker/lrc-parser": "^0.1.10",
         "react": "^17.0.1",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^17.0.1"
     },
     "devDependencies": {
@@ -36,6 +37,7 @@
         "@types/node": "^14.14.6",
         "@types/prettier": "^2.1.5",
         "@types/react": "^16.9.55",
+        "@types/react-copy-to-clipboard": "^5.0.0",
         "@types/react-dom": "^16.9.9",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
